# flazel

./: BUILD.bazel  LICENSE  MODULE.bazel  README.md  flake.nix
bazel/: BUILD.bazel  nix_cc.bzl  nix_common.bzl  nix_rust.bzl  nix_tool.bzl  nix_toolchain.bzl
lib/cc/: cc_toolchain_config.bzl  derivation.nix  dev-shell.nix  nixpkgs-repo.nix  toolchain.nix
lib/core/: archive-manifest.nix  bcr-cache.nix  constants.nix  derivation.nix  dev-shell.nix  platform.nix  utils.nix
lib/rust/: cargo-bazel-release-parse.patch  cargo-bazel.nix  derivation.nix  dev-shell.nix  toolchain.nix
tests/cc/: .bazelrc  BUILD.bazel  MODULE.bazel  flake.nix
tests/cc/freestanding/: BUILD.bazel  freestanding.c
tests/cc/hello/: BUILD.bazel  greeting.cc  greeting.h  greeting_test.cc  main.cc
tests/rust/: .bazelrc  BUILD.bazel  MODULE.bazel  crates_vendor_extension.bzl  flake.nix  flazel-archives.json
tests/rust-min/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  flake.nix  flazel-archives.json
tests/rust-min/src/: main.rs
tests/rust-vendor/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  flake.nix  flazel-archives.json
tests/rust-vendor/src/: main.rs
tests/rust/hello/: BUILD.bazel  Cargo.toml
tests/rust/hello/src/: lib.rs  main.rs  no_std_check.rs  no_std_compat.rs
tests/tool/: BUILD.bazel  MODULE.bazel  flake.nix  in.txt
