module(
    name = "flazel",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.4")

# No rules_rust dep, deliberately: C++-only consumers must not inherit it (nor
# the BCR registry/repo caches it needs). Rust consumers declare their own
# bazel_dep and hand it to the nix_rust extension via inject_repo; see the
# usage recipe in bazel/nix_rust.bzl.
