load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "nix_common",
    srcs = ["nix_common.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "nix_cc",
    srcs = ["nix_cc.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":nix_common",
        "@bazel_tools//tools/build_defs/cc:action_names",
    ],
)
