module(
    name = "flazel-rust-vendor-test",
    version = "0.0.1",
)

bazel_dep(name = "rules_rust", version = "0.56.0")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "flazel", version = "0.0.1")
bazel_dep(name = "platforms", version = "1.0.0")

local_path_override(
    module_name = "flazel",
    path = "../..",
)

# CC toolchain (linker for rust on NixOS).
nix_cc = use_extension("@flazel//bazel:nix_cc.bzl", "nix_cc")
nix_cc.toolchain(name = "default")
use_repo(
    nix_cc,
    "local_config_cc_default",
    "local_config_cc_default_deps",
)

# Rust toolchain (Nix-provided rustc). The generated toolchain repo loads
# @rules_rust, which flazel itself does not depend on (C++-only consumers must
# stay rules_rust-free); inject this module's rules_rust into the extension.
nix_rust = use_extension("@flazel//bazel:nix_rust.bzl", "nix_rust")
nix_rust.toolchain(name = "default")
use_repo(nix_rust, "local_config_rust_default")

inject_repo(nix_rust, "rules_rust")

register_toolchains("@local_config_rust_default//:all")

# Nix host tools, used only when (re)vendoring via `bazel run //:crate_vendor`.
# Offline builds use the committed local sources and need none of this.
host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
host_tools.host_tools(
    edition = "2021",
    version = "1.85.0",
)

nix_rust_host_tools = use_repo_rule("@flazel//bazel:nix_rust.bzl", "nix_rust_host_tools")

nix_rust_host_tools(name = "nix_rust_host_tools")

override_repo(
    host_tools,
    rust_host_tools = "nix_rust_host_tools",
)
