# nix_tool integration test. A standalone tool (sed, as @upcase) and a multicall
# tool (coreutils tr, as @upper) are each driven through both target shapes.

# Raw symlink: $(location @upcase) -> the resolved Nix store binary. This is the
# genrule shorthand downstream projects use (e.g. $(location @magick-bin)).
genrule(
    name = "via_symlink",
    srcs = ["in.txt"],
    outs = ["via_symlink.txt"],
    cmd = "$(location @upcase) 's/ok/OK/' < $< > $@",
    tools = ["@upcase"],
)

# Executable target: @upcase//:bin is the wrapper.sh-backed nix_executable that
# execs the resolved store path. Exercises the NixOS-launcher workaround path.
genrule(
    name = "via_bin",
    srcs = ["in.txt"],
    outs = ["via_bin.txt"],
    cmd = "$(location @upcase//:bin) 's/ok/OK/' < $< > $@",
    tools = ["@upcase//:bin"],
)

# Multicall (coreutils tr) via the @repo shorthand: only works if argv[0] is the
# applet name "tr" rather than the repo name "upper".
genrule(
    name = "multicall_symlink",
    srcs = ["in.txt"],
    outs = ["multicall_symlink.txt"],
    cmd = "$(location @upper) a-z A-Z < $< > $@",
    tools = ["@upper"],
)

# Multicall via the wrapper executable.
genrule(
    name = "multicall_bin",
    srcs = ["in.txt"],
    outs = ["multicall_bin.txt"],
    cmd = "$(location @upper//:bin) a-z A-Z < $< > $@",
    tools = ["@upper//:bin"],
)
