module(
    name = "flazel-tool-test",
    version = "0.0.1",
)

bazel_dep(name = "flazel", version = "0.0.1")
local_path_override(
    module_name = "flazel",
    path = "../..",
)

# Expose the devshell "sed" binary under the repo name "upcase", mirroring
# downstream usage (name != binary_name, so @upcase aliases the sed file).
nix_tool = use_repo_rule("@flazel//bazel:nix_tool.bzl", "nix_tool")

nix_tool(
    name = "upcase",
    binary_name = "sed",
)

# coreutils "tr" is a multicall binary (one executable dispatching on argv[0]).
# Exposing it exercises the argv[0]-preservation fix.
nix_tool(
    name = "upper",
    binary_name = "tr",
)
