[package]
name = "hello"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "hello"
path = "src/main.rs"

[lib]
name = "hello"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
